force-app/main/default/objects/Form_1_Cert_Status__c/fields/Certification_List_Number__c.field-meta.xml
<CustomField>
    <fullName>Certification_List_Number__c</fullName>
    <label>Cert List #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>