force-app/main/default/objects/Form_1_Cert_Status__c/fields/Contact_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Contact_Letter_Sent__c</fullName>
    <label>El Letters Sent</label>
    <type>Date</type>
</CustomField>