force-app/main/default/objects/Form_1_Cert_Status__c/fields/Date_Application_Sent_to_Divisions__c.field-meta.xml
<CustomField>
    <fullName>Date_Application_Sent_to_Divisions__c</fullName>
    <label>Apps Released to Division</label>
    <type>Date</type>
</CustomField>