force-app/main/default/objects/Form_1_Cert_Status__c/fields/Date_Certification_List_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Date_Certification_List_Expiration__c</fullName>
    <label>Cert List Expiration Date</label>
    <type>Date</type>
</CustomField>