force-app/main/default/objects/Form_1_Cert_Status__c/fields/Date_MQ_d_Apps_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_MQ_d_Apps_Sent__c</fullName>
    <label>MQ&#39;d Apps to Division</label>
    <type>Date</type>
</CustomField>