force-app/main/default/objects/Form_1_Cert_Status__c/fields/F1_Received_by_Certs__c.field-meta.xml
<CustomField>
    <fullName>F1_Received_by_Certs__c</fullName>
    <label>F1 Received by Certs</label>
    <type>Date</type>
</CustomField>