force-app/main/default/objects/Form_1_Cert_Status__c/fields/Final_Filing_Date_SROA__c.field-meta.xml
<CustomField>
    <fullName>Final_Filing_Date_SROA__c</fullName>
    <label>SROA Clearance</label>
    <type>Date</type>
</CustomField>