force-app/main/default/objects/Form_1_Cert_Status__c/fields/Form_1__c.field-meta.xml
<CustomField>
    <fullName>Form_1__c</fullName>
    <label>Form 1</label>
    <referenceTo>Form_1__c</referenceTo>
    <relationshipLabel>Form 1 Cert Status</relationshipLabel>
    <relationshipName>Form_1_Cert_Status</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>