force-app/main/default/objects/Form_1_Cert_Status__c/fields/Job_Control_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Control_Number__c</fullName>
    <label>Job Control Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>