force-app/main/default/objects/Form_1_Cert_Status__c/fields/Job_Posting_Ending_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_Ending_Date__c</fullName>
    <label>FFD</label>
    <type>Date</type>
</CustomField>