force-app/main/default/objects/Form_1_Cert_Status__c/fields/Job_Start_Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Start_Posting_Date__c</fullName>
    <label>Published Date</label>
    <type>Date</type>
</CustomField>