force-app/main/default/objects/Form_1_Cert_Status__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <formula>If (Form_1__r.SEC2_Working_Headquarters__c &lt;&gt;&quot;&quot;,Form_1__r.SEC2_Working_Headquarters__c, Form_1__r.SEC1_Working_Headquarters__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location</label>
    <type>Text</type>
</CustomField>