force-app/main/default/objects/Form_1_Cert_Status__c/fields/Number_of_Applications_Sent__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Applications_Sent__c</fullName>
    <label>Number of Apps Released</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>